fix(VOverlay): apply scrollbar offset to body and VNavigationDrawer

--- a/packages/vuetify/src/components/VOverlay/VOverlay.sass
+++ b/packages/vuetify/src/components/VOverlay/VOverlay.sass
@@ -64,3 +64,6 @@
       left: var(--v-body-scroll-x)
       width: 100%
       height: 100%
+
+    .v-navigation-drawer--right.v-navigation-drawer--active
+      margin-right: var(--v-scrollbar-offset)
